--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="encabezado-flex">
         <img src="img/logo-saralu.png" alt="Logo Representaciones Saralu" class="logo-principal">
         <div>
-            <h1 class="titulo-principal">Representaciones SaraLu<br>Joyería y Perfumes</h1>
+            <h1 class="titulo-principal">Representaciones SaraLu<br>Perfumes</h1> <br> La Riviera
             <p class="leyenda">Descubre el brillo que te define — elegancia, lujo y esencia en cada detalle.</p>
         </div>
     </div>
